# deployr-dev

./: .gitignore  .python-version  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
examples/20230118_healthrex_ml_workshop/: Train and evaluate a binary ML model.ipynb
examples/benchmarks/: driver.py  shapley.py  wrapper.py
examples/hemestamp/: driver.py
healthrex_ml/: cosmos.py  utils.py
healthrex_ml/cohorts/: __init__.py  cohort.py  starr_cohorts.py
healthrex_ml/datasets/: __init__.py  starr_datasets.py
healthrex_ml/deployers/: SklearnDeployer.py  __init__.py  constants.py  extractors.py  integrations.py  sklearn_deployers.py
healthrex_ml/deployers/tests/: test_integrations.py
healthrex_ml/evaluators/: __init__.py  evaluators.py
healthrex_ml/extractors/: __init__.py  label_extractors.py  starr_extractors.py
healthrex_ml/featurizers/: __init__.py  constants.py  starr_featurizers.py
healthrex_ml/models/: __init__.py  sequence_models.py
healthrex_ml/trainers/: __init__.py  pytorch_trainers.py  sklearn_trainers.py
