[tool.poetry]
name = "healthrex_ml"
version = "0.1.0"
description = "Tools for creating cohorts, features, and models"
authors = ["Conor Corbin <ccorbin@stanford.edu>"]

[tool.poetry.dependencies]
python = "^3.7.1,<3.11"
google-cloud-bigquery = "3.3.2"
pandas = "1.3.5"
scikit-learn = "1.0.2"
torch = "1.12.1"
tensorboard = "2.10.1"
tqdm = "4.64.1"
pandas-gbq = "0.17.9"
grpcio-tools = "1.44.0" # for weird protobuf errors
seaborn = "0.12.1"
pyyaml = "6.0"
lightgbm = "3.1.1"
jupyter = "1.0.0" # likely useful

[tool.poetry.group.dev.dependencies]
# Utilities for sorting code
black = "^22.3.0"
isort = "^5.1"
# Type-checking
mypy = "^1.0"
# Checks that run before commit-ing
pre-commit = "^2.20.0"

[tool.poetry.group.test-common.dependencies]
python-dotenv = "^0.20.0"
pytest = "^7.1.2"
requests = "^2.28.1"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
src_paths = ["healthrex_ml"]

[tool.mypy]
check_untyped_defs = true
color_output = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_decorators = false
disallow_untyped_defs = true
error_summary = true
ignore_missing_imports = true
no_implicit_optional = true
pretty = true
show_error_context = true
strict_equality = true
strict_optional = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = false
warn_unreachable = true
warn_unused_ignores = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
